k3s_server/automation/automation.home-assistant.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: home-assistant
  name: home-assistant
spec:
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 8123
  selector:
    app: home-assistant
  type: LoadBalancer
