k3s_server/automation/automation.ingress.yaml
apiVersion: v1
kind: Ingress
metadata:
  namespace: "automation"
  name: "home-assistant-ingress"
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
  - hosts:
    - automation.192.168.1.100.nip.io
    secretName: "automation.192.168.1.100.nip.io-prod-tls"
  rules:
  - host: "automation.192.168.1.100.nip.io"
    http:
      paths:
        - backend:
            serviceName: "home-assistant"
            servicePort: 80
          path: ""
